add toolbar with buttons, to add new objects to galaxy map

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,5 @@
 @import url("./components/menubar.css");
 @import url("./components/footer.css");
+@import url("./components/toolbar.css");
 
 /* app global css */
