map tool improvements, show preview for system and nebulae, smooth camera movement, dont reset map when adding new star or nebulae

--- a/src/css/components/toolbar.css
+++ b/src/css/components/toolbar.css
@@ -20,7 +20,7 @@
 
 .galaxy-scene.tool-addSystem,
 .galaxy-scene.tool-addNebula {
-  cursor: crosshair;
+  cursor: none;
 }
 
 .galaxy-scene.tool-addHyperlane,
